syntax = "proto3";
package adksim.v1;

import "google/ai/generativelanguage/v1beta/generative_service.proto";
import "adksim/v1/simulator_session.proto";

// SimulatorService provides the "Remote Brain" protocol for the ADK Agent Simulator.
// It enables human-in-the-loop validation of agent workflows by intercepting LLM calls
// and routing them to a web UI for manual decision-making.
service SimulatorService {
  // CreateSession registers a new simulation session (or ensures existence).
  // Called by the Plugin when an ADK application starts.
  rpc CreateSession(CreateSessionRequest) returns (CreateSessionResponse);

  // Subscribe opens a bidirectional event stream for a session.
  // Server MUST replay all historical events before streaming live ones.
  // Used by both Plugin and UI to receive real-time updates.
  rpc Subscribe(SubscribeRequest) returns (stream SubscribeResponse);

  // SubmitRequest publishes an intercepted LLM request to the session.
  // Called by the Plugin when an agent triggers a model call.
  rpc SubmitRequest(SubmitRequestRequest) returns (SubmitRequestResponse);

  // SubmitDecision publishes a human decision (response) to the session.
  // Called by the UI when the user completes their response.
  rpc SubmitDecision(SubmitDecisionRequest) returns (SubmitDecisionResponse);

  // ListSessions returns all historical sessions for the landing page.
  rpc ListSessions(ListSessionsRequest) returns (ListSessionsResponse);
}

// --- Session Messages ---

// CreateSessionRequest is sent by the Plugin to register a new session.
message CreateSessionRequest {
  // Optional description for the session.
  string description = 1;
}

// CreateSessionResponse contains the created or existing session.
message CreateSessionResponse {
  // The session that was created or retrieved.
  SimulatorSession session = 1;
}

// --- Subscription Messages ---

// SubscribeRequest initiates an event stream subscription.
message SubscribeRequest {
  // The session ID to subscribe to.
  string session_id = 1;
  // Client identifier for debug/logging purposes (UUID).
  string client_id = 2;
}

// SubscribeResponse wraps a SessionEvent in the subscription stream.
message SubscribeResponse {
  // The event being streamed.
  SessionEvent event = 1;
}

// --- Submit Messages ---

// SubmitRequestRequest publishes an intercepted LLM request.
message SubmitRequestRequest {
  // The session to publish to.
  string session_id = 1;
  // Correlation ID for this request/response pair.
  string turn_id = 2;
  // Name of the agent making the request.
  string agent_name = 3;
  // The intercepted LLM request.
  google.ai.generativelanguage.v1beta.GenerateContentRequest request = 4;
}

// SubmitRequestResponse confirms the request was received.
message SubmitRequestResponse {
  // The event ID assigned to this request.
  string event_id = 1;
}

// SubmitDecisionRequest publishes a human decision.
message SubmitDecisionRequest {
  // The session this decision belongs to.
  string session_id = 1;
  // Correlation ID linking to the original request.
  string turn_id = 2;
  // The human's response.
  google.ai.generativelanguage.v1beta.GenerateContentResponse response = 3;
}

// SubmitDecisionResponse confirms the decision was received.
message SubmitDecisionResponse {
  // The event ID assigned to this decision.
  string event_id = 1;
}

// --- List Sessions Messages ---

// ListSessionsRequest queries for historical sessions.
message ListSessionsRequest {
  // Maximum number of sessions to return.
  int32 page_size = 1;
  // Pagination token from a previous response.
  string page_token = 2;
}

// ListSessionsResponse contains the requested sessions.
message ListSessionsResponse {
  // The sessions matching the query.
  repeated SimulatorSession sessions = 1;
  // Token for fetching the next page, if any.
  string next_page_token = 2;
}
